syntax = "proto3";

package envoy.extensions.certificate_providers.static_cert_provider.v3;

import "envoy/config/core/v3/base.proto";

import "udpa/annotations/status.proto";

option java_package = "io.envoyproxy.envoy.extensions.certificate_providers.static_cert_provider.v3";
option java_outer_classname = "ConfigProto";
option java_multiple_files = true;
option go_package = "github.com/envoyproxy/go-control-plane/envoy/extensions/certificate_providers/static_cert_provider/v3;static_cert_providerv3";
option (udpa.annotations.file_status).package_version_status = ACTIVE;

// [#protodoc-title: Static Certificate Provider]
// [#extension: envoy.cert_providers.static_cert_provider]

// A StaticCertificateProvider provides static TLS identity certificate
// [#extension-category: envoy.cert_providers]

message StaticCertificateProviderConfig {
  config.core.v3.DataSource certificate = 1;

  config.core.v3.DataSource private_key = 2;
}
